--- a/src/Covid/Covid.scss
+++ b/src/Covid/Covid.scss
@@ -7,7 +7,7 @@
             width: 100%;
             display: flex;
             justify-content: center;
-          //  border: 1px solid blue;
+            border: 1px solid blue;
           //  align-content: center;
     }
 
@@ -44,9 +44,21 @@
 } 
 
 @media(max-width: 620px){
-    .Covid_dropdownCalendar{
-         flex-direction: column;
-         align-items: center;
-    
+    .Covid{
+        &_dropdownCalendar{
+            flex-direction: column;
+            align-items: center;
+       }
+
+       &-countryTables{
+        flex-direction: column;
+        align-items: center;
+      //  padding-left: 20%;
+        border: 2px solid green;
     }
+
+    }
+
+  
+
 } 
