--- a/src/Covid/components/CountryData/CountryData.scss
+++ b/src/Covid/components/CountryData/CountryData.scss
@@ -7,7 +7,7 @@
  margin: 1rem;
  color: $text-color-secondary;
  display: inline-block;
- border: 1px solid pink;
+ //border: 1px solid pink;
 
     &-row{
 
