--- a/src/Covid/components/Error/Error.scss
+++ b/src/Covid/components/Error/Error.scss
@@ -1,15 +1,20 @@
-@import '../../scss//variables';
+@import "../../scss//variables";
 
-.Error{
-    background-color: $color-red-error;
-    color: $color-white;
-    font-size: $default-font-size;
-    width: 90%;
-    margin-left: 5%;
-    height: 3rem;
-    border-radius: 4px;
-    vertical-align: center;
-    padding-top: 0.2rem;
-    margin-bottom: 0.75rem;
+.statisticsError {
+  background-color: $color-red-error;
+  color: $color-white;
+  font-size: $default-font-size;
+  width: 90%;
+  margin-left: 5%;
+  height: 3rem;
+  border-radius: 4px;
+  vertical-align: center;
+  padding-top: 0.2rem;
+  margin-bottom: 0.75rem;
 }
 
+.statisticsErrorIcon {
+  transform: scale(1.2);
+  margin-left: 1rem;
+  margin-right: 0.5rem;
+}
